--- a/mysql.yaml
+++ b/mysql.yaml
@@ -6,3 +6,8 @@
       ansible.builtin.package:
         name: mysql-server
         state: installed
+    - name: start and enable mysql server
+      ansible.builtin.service:
+        name: mysql
+        state: started
+        enable: yes
