--- a/mysql.yaml
+++ b/mysql.yaml
@@ -9,6 +9,6 @@
 
     - name: start and enable mysql server
       ansible.builtin.service:
-        name: mysql
+        name: mysqld
         state: started
         enable: yes
