--- a/inventory.ini
+++ b/inventory.ini
@@ -1,2 +1,15 @@
 [mysql]
-172.31.18.41 ansible_user=ec2-user ansible_password=DevOps321
+172.31.18.41 
+
+[backend]
+
+
+
+[frontend]
+
+
+
+
+[all:vars]
+ansible_user=ec2-user 
+ansible_password=DevOps321
