--- a/mysql.yaml
+++ b/mysql.yaml
@@ -1,7 +1,17 @@
 - name: configure mysql server
   hosts: mysql
   become: yes
+  vars:
+    mysql_root_password: ExpenseApp@1
   tasks:
+    - name: install MYSQL libraries
+      ansible.builtin.pip:
+        name: "{{ item }}"
+        executable: pip3.9
+      loop:
+        - cryptography
+        - PyMySQL
+
     - name: install mysql server
       ansible.builtin.package:
         name: mysql-server
@@ -12,3 +22,19 @@
         name: mysqld
         state: started
         enabled: yes
+
+    - name: connect to MYSQL server
+      community.mysql.mysql_info:
+        login_user: root
+        login_password: "{{ mysql_root_password }}"
+        login_host:
+      register: mysql_info
+      ignore_error: true
+
+    - name: print the output
+      ansible.builtin.debug:
+        msg: "mysql info: {{ mysql_info }}"
+
+    - name: setup root password
+      ansible.builtin.command: "mysql_secure_installation --set-root-pass {{ mysql_root_password}}"
+      when: mysql_info.failed is true
