--- a/mysql.yaml
+++ b/mysql.yaml
@@ -23,7 +23,7 @@
         state: started
         enabled: yes
 
-    - name: connect to MYSQL server
+    - name: connect to mysql server
       community.mysql.mysql_info:
         login_user: root
         login_password: "{{ mysql_root_password }}"
