--- a/backend.yaml
+++ b/backend.yaml
@@ -6,7 +6,7 @@
       ansible.builtin.command: dnf module disable nodejs -y
 
     - name: enable nodejs 20
-      ansible.builtin.coomand: dnf module enable nodejs:20 -y
+      ansible.builtin.command: dnf module enable nodejs:20 -y
 
     - name: install nodejs
       ansible.builtin.package:
