--- a/mysql.yaml
+++ b/mysql.yaml
@@ -4,7 +4,7 @@
   vars:
     mysql_root_password: ExpenseApp@1
   tasks:
-    - name: install MYSQL libraries
+    - name: Install MySQL libraries
       ansible.builtin.pip:
         name: "{{ item }}"
         executable: pip3.9
@@ -12,7 +12,7 @@
         - cryptography
         - PyMySQL
 
-    - name: install mysql server
+    - name: Install MySQL server
       ansible.builtin.package:
         name: mysql-server
         state: installed
@@ -24,17 +24,17 @@
         enabled: yes
 
     - name: connect to mysql server
-      community.mysql.mysql_db:
+      community.mysql.mysql_info:
         login_user: root
         login_password: "{{ mysql_root_password }}"
-
+        login_host: 172.31.17.147
       register: mysql_info
-      ignore_error: true
+      ignore_errors: true
 
     - name: print the output
       ansible.builtin.debug:
-        msg: "mysql info: {{ mysql_info }}"
+        msg: "MySQL info: {{ mysql_info }}"
 
     - name: setup root password
-      ansible.builtin.command: "mysql_secure_installation --set-root-pass {{ mysql_root_password}}"
+      ansible.builtin.command: " mysql_secure_installation --set-root-pass {{ mysql_root_password }} "
       when: mysql_info.failed is true
