--- a/frontend.yaml
+++ b/frontend.yaml
@@ -26,7 +26,7 @@
     - name: download frontend code
       ansible.builtin.get_url:
         url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-frontend-v2.zip
-        dest: tmp/frontend.zip
+        dest: /tmp/frontend.zip
 
     - name: unzip frontend code
       ansible.builtin.unarchive:
